# intrinsec-value-pricer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  MAINTENANCE.md  README.md  TEST_SUITE_DOCUMENTATION.md  WINDOWS_TEST_FIX.md  app_logs.txt  audit_complet.diff  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test_imports.py  test_session_state.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.hypothesis/constants/: 093fa838d8140d5c  127aa6886c500d6f  15f998fddd6c37c7  28673e4bc5009ee9  2a2e7de4238330bc  2a4c1b0e5349d3fe  2bebf444459ef358  2c14ae5eefbe9405  2d31f4aaae8d6a14  2d7ca5a0f7d31ecb  361ad020d082f64f  375e996620efe363  3e82ec3f36e42836  490ea1e7a1f109fa  491b9127715c5b2b  495022fa95338713  4a4a8a85179b27a7  579b8906f0e710a1  5cebe67e811c8225  5dd98a164720f0a9  5e0f82acaa19187f  5e37452d9ca2347a  608a5deef50a9f28  65f154da2c2631aa  675727b2506e561a  6e17f0bcc2ed30d9  70c2241423f14e15  731f88206de1b87f  737d051dae545b1a  7417282376214ec6  793ea00dd561b60d  7a386f445fb492a0  7f147c73252848e0  80d9e99826f75f88  8299b467f5199d63  8630c1c81f6d8b64  87fedeaf657dd9dc  8af43d2d8c28f2bf  8cedf131d0b8e622  a338c89124fd60eb  (+15 more)
.streamlit/: config.toml
app/: __init__.py  main.py  ui_charts.py  ui_kpis.py  ui_methodology.py  workflow.py
app/adapters/: __init__.py  streamlit_adapters.py  ui_binder.py
app/assets/: style_system.py
config/: sector_multiples.yaml  settings.yaml
core/: diagnostics.py  exceptions.py  models.py
docs/: Etat de l'art peu avant la phase 2 avant refact.txt  MYPY_CONFIG.md  Next step proche .txt  PR31_FINALIZATION.md  PROJECT_STATUS.md  README.md  SBC_IMPLEMENTATION_SUMMARY.md  SBC_USER_GUIDE.md  architecture.md  evolution_plan_for_dcf_calculation.md  evolution_plan_for_dcf_calculation.txt  futur
src/: __init__.py  diagnostics.py  exceptions.py  quant_logger.py
tests/: __init__.py  conftest.py  test_audit_engine.py  test_calculator.py  test_invariants.py  test_method_config.py  test_strategies.py  test_yahoo_provider_integration.py
(+448 files in other folders)
