[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intrinsec-value-pricer"
version = "1.0.0"
description = "Institutional-grade intrinsic value calculator"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.40.0,<2.0",
    "pandas>=2.2.0,<3.0",
    "numpy>=1.26.0,<2.0",
    "pydantic>=2.5.0,<3.0",
    "yfinance>=0.2.30,<1.0",
    "plotly>=5.18.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["src*", "app*", "infra*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"