[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intrinsec-value-pricer"
version = "1.0.0"
description = "Institutional-grade intrinsic value calculator"
requires-python = ">=3.10"

dependencies = [
    "streamlit==1.54.0",
    "pandas==2.3.3",
    "numpy==1.26.4",
    "pydantic==2.12.5",
    "yfinance==0.2.66",
    "plotly==5.24.1",
    "altair==6.0.0",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "hypothesis==6.151.6",
    "ruff==0.15.0",
    "mypy==1.19.1",
]

[tool.setuptools.packages.find]
include = ["src*", "app*", "infra*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"